# pepscraper

./: .gitignore  README.md  main.py  pyproject.toml  tmp.py
pepscraper/: constants.py  http.py  models.py  project_scraper.py  sql.py
pepscraper/projects/pdep/: github.py  main.py  utils.py
pepscraper/projects/pep/: discourse.py  github.py  mails.py  main.py  types.py  utils.py
