[project]
name = "pepscraper"
version = "0.1.0"
description = "Turn software package enhancement proposals into a dataset."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogzip>=1.5.0",
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "pydantic>=2.13.2",
    "python-dateutil>=2.9.0.post0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "types-python-dateutil>=2.9.0.20260408",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
strict = false
check_untyped_defs = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
exclude = "^(docs/|tests/)"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.12.0",
    "sqlalchemy[mypy]>=2.0.49",
    "types-aiofiles>=25.1.0.20260409",
]
